<resources>
    <string name="app_name">Pet Shelter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_logged_in">LoggedInActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="import_word">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="you_are_logged_in">You are logged in</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_signed_in">SignedInActivity</string>

    <!--Species-->
    <string name="cat">Gato</string>
    <string name="dog">Cachorro</string>

    <!--Sex-->
    <string name="animal_male">Macho</string>
    <string name="animal_female">Femea</string>

    <!--Size-->
    <string name="small">Pequeno</string>
    <string name="medium">Medio</string>
    <string name="large">Grande</string>

    <string name="name_optional_hint">Nome (opcional)</string>
    <string name="species_label">Especie:</string>
    <string name="register">Cadastrar</string>
    <string name="sex_label">Sexo:</string>
    <string name="animal_size_label">Porte:</string>
    <string name="age_months_hint">Idade (meses)</string>
    <string name="age_required">Idade obrigatória</string>
    <string name="invalid_format">Formato inválido</string>
    <string name="registering">Cadastrando…</string>
    <string name="animal_register_success">Animal cadastrado com sucesso.</string>
    <string name="animal_register_fail">Erro ao salvar, tente novamente mais tarde.</string>
    <string name="new_animal">Novo Animal</string>
    <string name="list_animals">Listar animais</string>
</resources>
