<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AnimalRegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name_inputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_optional_hint"
            android:imeOptions="actionDone"
            android:inputType="textShortMessage"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/species_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_margin"
        android:text="@string/species_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textInputLayout" />

    <Spinner
        android:id="@+id/species_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/species_label" />

    <TextView
        android:id="@+id/sex_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_margin"
        android:text="@string/sex_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/species_spinner" />

    <Spinner
        android:id="@+id/sex_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex_label" />

    <TextView
        android:id="@+id/size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_margin"
        android:text="@string/animal_size_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex_spinner" />

    <Spinner
        android:id="@+id/animal_size_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_label" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/age_months_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animal_size_spinner">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/age_months_inputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_months_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_animal_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_margin"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_months_textInputLayout" />

</android.support.constraint.ConstraintLayout>
